# olympus

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  FLL2022Missions.txt  HTTPHandler.cpp  HTTPHandler.h  JSExecutor.cpp  JSExecutor.h  LICENSE.txt  MimeTypes.cpp  MimeTypes.h  README.md  RequestHandler.h  RequestHandlerDetails.h  TODO.txt  apt-requirements.txt  build.rs  fll_2022.json  http_listener.cpp  http_listener.h  javascript_executor.cpp  javascript_executor.h  main.cpp  mime_types.cpp  mime_types.h  package_win.ps1  request_handler.h  resources.rc  vcpkg.json
.github/workflows/: CI.yml  Release-Assets.yml  docker-publish.yml  release-linux-assets.yml  release-windows-assets.yml
cmake/: CheckGit.cmake  git_version.hpp.in
cmake/Modules/: FindCasablanca.cmake
common/: Match.cpp  Match.h  Phase.cpp  Phase.h  PhaseResults.cpp  PhaseResults.h  Results.cpp  Results.h  Schedule.cpp  Schedule.h  Session.h  Team.cpp  Team.h  config.cpp  config.h  match.cpp  match.h  phase.cpp  phase.h  results.cpp  results.h  schedule.cpp  schedule.h  session.cpp  session.h  team.cpp  team.h
dynamic/BEST2017/: CompareTeams.js  Display.html  Overlay.html  Scorecard.html
dynamic/BEST2017/scripts/: DefaultCustomFields.js  Display.js  GetTeamScore.js  NotebookScoring.js  Overlay.js  Scorecard.js  SelectNextPhase.js
dynamic/BEST2017/stylesheets/: Display.css  NotebookScoring.css  Overlay.css  Scorecard.css
dynamic/BEST2018/: Display.html  NotebookScoring.html  Scorecard.html
dynamic/BEST2018/scripts/: GetTeamScore.js  NotebookScoring.js  Scorecard.js  SelectNextPhase.js
dynamic/BEST2018/stylesheets/: Display.css  Scorecard.css
dynamic/FLL2017/: Display.html  Scorecard.html
dynamic/FLL2017/scripts/: CompareTeams.js  Display.js  GetTeamScore.js  Scorecard.js
dynamic/FLL2017/stylesheets/: Display.css  Scorecard.css
dynamic/FLL2021/: Display.html  Scorecard.html
dynamic/FLL2021/scripts/: DefaultCustomFields.js  Display.js  Scorecard.js
dynamic/FLL2021/stylesheets/: Display.css  TimerDisplay.css
dynamic/FLL2022/: Scorecard.html
dynamic/FLL2022/scripts/: Scorecard.js  SelectNextPhase.js
packaging/: CMakeLists.txt  Description.txt  License.txt  Readme.txt  Welcome.txt
request_handlers/: AllRequestHandlers.h  ControlQueryHandler.cpp  ControlQueryHandler.h  DynamicResourceHandler.cpp  DynamicResourceHandler.h  ResultsHandler.cpp  ResultsHandler.h  ScheduleHandler.cpp  ScheduleHandler.h  ScoresHandler.cpp  ScoresHandler.h  StaticResourceHandler.cpp  StaticResourceHandler.h  TeamHandler.cpp  TeamHandler.h  TimerHandler.cpp  TimerHandler.h  all_request_handlers.h  config_handler.cpp  config_handler.h  control_query_handler.cpp  control_query_handler.h  dynamic_resource_handler.cpp  dynamic_resource_handler.h  results_handler.cpp  results_handler.h  schedule_handler.cpp  schedule_handler.h  scores_handler.cpp  scores_handler.h  session_save_handler.cpp  session_save_handler.h  static_resources_handler.cpp  static_resources_handler.h  team_handler.cpp  team_handler.h  timer_handler.cpp  timer_handler.h
src/: app_error.rs  app_state.rs  arguments.rs  bool_question.hpp  config.hpp  enum_question.hpp  game_description.rs  get_exec_path.cpp  get_exec_path.hpp  get_ip_addresses.cpp  get_ip_addresses.hpp  handlers.rs  http_listener.cpp  http_listener.hpp  json_mission.cpp  json_mission.hpp  json_session.cpp  json_session.hpp  json_team.cpp  json_team.hpp  main.cpp  main.rs  mime_types.cpp  mime_types.hpp  mission.hpp  number_question.hpp  question.hpp  request_handler.hpp  request_handler_details.hpp  resource_management.rs  save_session_backup.cpp  save_session_backup.hpp  session.hpp  team.hpp  templates.rs  version.hpp.in  version.rs
src/game_description/: game.hpp  json_game.cpp  json_game.hpp  json_mission.cpp  json_mission.hpp  mission.hpp  questions.hpp
src/generation/: score_calculator_generation.cpp  score_calculator_generation.hpp  scorecard_generation.cpp  scorecard_generation.hpp
src/handlers/: announcement_handler.rs  config_handler.rs  control_query_handler.rs  game_description_handler.rs  generated_files_handler.rs  scores_handler.rs  session_save_handler.rs  sponsors_handler.rs  team_handler.rs  theme_handler.rs  timer_handler.rs
src/request_handlers/: all_request_handlers.hpp  announcement_handler.cpp  announcement_handler.hpp  config_handler.cpp  config_handler.hpp  control_query_handler.cpp  control_query_handler.hpp  game_definition_handler.cpp  game_definition_handler.hpp  generated_resource_handler.cpp  generated_resource_handler.hpp  results_handler.cpp  results_handler.hpp  scores_handler.cpp  scores_handler.hpp  session_save_handler.cpp  session_save_handler.hpp  sponsors_handler.cpp  sponsors_handler.hpp  static_resources_handler.cpp  static_resources_handler.hpp  team_handler.cpp  team_handler.hpp  timer_handler.cpp  timer_handler.hpp
src/resources/game_configs/: fll_2024.json  fll_2025.json
src/resources/static_files/: Display.html  Scorecard.html  TeamDetails.html  TimerDisplay.html  display.html  index.html  results.html  scorecard.html  team_details.html  teams.html  timer_display.html
src/resources/static_files/scripts/: Display.js  HideCursor.js  Scorecard.js  TeamDetails.js  (+6 more)
src/state_description/: config.hpp  json_session.cpp  json_session.hpp  json_team.cpp  json_team.hpp  session.hpp
src/templates/: score_calculator.js.template  scorecard.html.template
src/test_resources/: expected_score_calculator.js  expected_scorecard.html
src/test_resources/game_configs/: test_game.json
src/utilities/: string_utilities.hpp
static/: Display.html  Scorecard.html  TeamDetails.html  TimerDisplay.html  index.html  results.html  schedule.html  teams.html
static/scripts/: Display.js  HideCursor.js  Scorecard.js  TeamDetails.js  TimerDisplay.js  display.js  index.js  results.js  schedule.js  teams.js
static/stylesheets/: Display.css  Scorecard.css  index.css  results.css  schedule.css  stylesheet.css  teams.css
test/: CMakeLists.txt  test_json_game.cpp  test_json_mission.cpp  test_json_team.cpp
(+12 files in other folders)
