[package]
name = "olympus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
tinytemplate = "1.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout"] }

[package.metadata.packager]
before-packaging-command = "cargo build --release"
