[package]
name = "olympus"
version = "2025.2.0"
edition = "2024"
authors = ["Matthew Barulic"]
description = "Score keeping software for FIRST LEGO League."
repository = "https://github.com/barulicm/olympus"
documentation = "https://github.com/barulicm/olympus/wiki"
license = "MIT"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
directories = "6.0.0"
glob = "0.3.2"
include_dir = "0.7.4"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
tinytemplate = "1.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout"] }

[build-dependencies]
vergen-gitcl = "1.0.5"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }

[package.metadata.packager]
before-packaging-command = "cargo build --release"

[lints.clippy]
unwrap_used = "deny"
